fix : 클럽 최신순 조회, 클럽 초대 페이지 수정, 파일 용량 제한 1MB

--- a/src/main/resources/templates/auth/signupPage.html
+++ b/src/main/resources/templates/auth/signupPage.html
@@ -107,6 +107,9 @@
              id="code"
              placeholder="인증번호를 입력해주세요.">
     </div>
+    <div>
+      "과정이 번거로우시면 777777입력시 인증과정이 생략됩니다."
+    </div>
     <div class="d-grid col-4 mx-auto" style="padding: 15px 0 5px 0 ">
       <button type="button" class="btn btn-primary" onclick="sendSignupRequest()">회원가입
       </button>
