--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -108,9 +108,10 @@
     $(document).ready(function(){
       $.ajax({
         type:'GET',
-        url:'/api/member/myHostingClub',
+        url:'/api/member/myHostingClub?size=4&page=0&sort=club.createdAt,desc',
         contentType: 'application/json',
         success: function (response){
+
           if(response.data === null) {
             $('#clubList').empty();
             $('#page').empty();
@@ -127,9 +128,21 @@
               clubId = currentItem.clubId;
               clubName = currentItem.clubTitle;
               clubContent = currentItem.content;
-              numberOfPeople = currentItem.maxMember;
               console.log("생성완료");
               var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
+              $.ajax({
+                type: 'GET',
+                url: '/api/club/' + clubId + '/memberCount',
+                contentType: 'application/json',
+                async: false,
+                success: function (countResponse) {
+                  memberCount = countResponse.data;
+                },
+                error: function (error) {
+                  console.error('Error fetching member count:', error);
+                }
+              });
 
               $('#clubList').append($('<div class="cardGroup" >\n'
                       + '    <tr>\n'
@@ -160,10 +173,6 @@
               );
             }
           }
-        },
-        error: function (error){
-          console.error('에러 :', error.responseJSON.msg);
-          alert(error.responseJSON.msg);
         }
       });
     })
@@ -206,7 +215,7 @@
   </div>
 </div>
 
-<div id="clubsList">
+<div id="clubList">
 </div>
 <nav aria-label="Page navigation example" class="pageNav">
   <ul class="pagination">
