--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -269,8 +269,8 @@
         }
 
         function invitingClicked() {
-            var memberId = /*[[${memberId}]]*/ '';
-            let url = '/api/member/' + memberId + '/myHostingClubPage'
+            var loginMemberId = /*[[${loginMemberId}]]*/ '';
+            let url = '/api/member/' + loginMemberId + '/myHostingClubPage'
             location.href = url;
         }
 
