fix : 클럽 초대 페이지 오류 수정, 이미지 링크 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -865,16 +865,16 @@
                         style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
                 </div>
                 <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
-                    <img src="/img/myclub.png" id="myclub" class="my-info"
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myclub.png" id="myclub" class="my-info"
                          style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
-                    <img src="/img/message.png" id="chatting" class="chat-icon"
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/message.png" id="chatting" class="chat-icon"
                          style="float: left; cursor: pointer; display: none; width: 35px; height: 35px; margin-right: 5px; margin-top: 5px">
                     <h2 class="login" id="loginBtn" style="float: left; cursor: pointer; margin-top: 5px">login</h2>
-                    <img src="/img/create.png" id="create" class="create"
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/create.png" id="create" class="create"
                          style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
-                    <img src="/img/myInfo.png" id="myInfo" class="my-info"
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myInfo.png" id="myInfo" class="my-info"
                          style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
-                    <img src="/img/arrow_10940959.png" id="logout" class="my-info"
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/arrow_10940959.png" id="logout" class="my-info"
                          style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
                 </div>
             </div>
@@ -889,7 +889,7 @@
                     <option value="content">내용</option>
                 </select>
                 <input type="text" id="searchText" placeholder="검색어 입력" onkeyup="handleKeyUp(event)">
-                <img src="/img/icon-search.png" onclick="searchKeyword()">
+                <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/icon-search.png" onclick="searchKeyword()">
             </div>
         </div>
     </div>
