--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -375,7 +375,7 @@
                         <form>
                             <div class="mb-3">
                                 <label for="password" class="col-form-label">비밀번호 입력 : </label>
-                                <input id="password" onkeypress="handleKeyPress(event)"></input>
+                                <input id="password" type="password" onkeypress="handleKeyPress(event)"></input>
                             </div>
                         </form>
                     </div>
