--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -100,6 +100,11 @@
       text-align: center;
       margin-right: 50px;
     }
+
+    .pagination {
+      display: flex;
+      justify-content: center;
+    }
   </style>
   <script>
     let memberId = [[${memberId}]];
@@ -172,10 +177,94 @@
                   )
               );
             }
+            $('#page').empty();
+            let cnt;
+            const cntArray = [];
+            if (response.data.totalElements > 4) {
+              cnt = response.data.totalElements / 4;
+            } else {
+              cnt = 1;
+            }
+            for (var i = 0; i < cnt; i++) {
+              cntArray.push(i + 1);
+            }
+            $(cntArray).each(function (index, res) {
+              // const card = '<li class="page-item"><a class="page-link" href="@{api/notice/{noticeId}(noticeId=${'+noticeId+'})/comment(page=${'+res+'})}">'+res+'</a></li>';
+              const card = '<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage(\''
+                  + res + '\')">' + res + '</a></li>';
+              $('#page').append(card);
+            })
           }
         }
       });
     })
+
+    function sendPage(pageNumber) {
+      $('#clubList').empty();
+      $.ajax({
+        type: 'GET',
+        url: '/api/member/myHostingClub?'
+            + 'size=4'
+            + '&page=' + (pageNumber-1)
+            + '&sort=club.createdAt,desc',
+        contentType: 'application/json',
+        success: function (response) {
+          for (var i = 0; i < response.data.content.length; i++) {
+            var currentItem = response.data.content[i];
+            if (currentItem.imageURL !== null) {
+              clubImage = currentItem.imageURL;
+            } else {
+              clubImage = '/img/default.png';
+            }
+            clubId = currentItem.clubId;
+            console.log(clubId);
+            clubName = currentItem.clubTitle;
+            clubContent = currentItem.content;
+            console.log("생성완료");
+            var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
+            $.ajax({
+              type: 'GET',
+              url: '/api/club/' + clubId + '/memberCount',
+              contentType: 'application/json',
+              async: false,
+              success: function (countResponse) {
+                memberCount = countResponse.data;
+              },
+              error: function (error) {
+                console.error('Error fetching member count:', error);
+              }
+            });
+            $('#clubList').append($('<div class="cardGroup" >\n'
+                    + '    <tr>\n'
+                    + '      <div class="cardParent">\n'
+                    + '        <div id="' + clubId + '" class="card mb-3" onclick="getClub(this.id)">\n'
+                    + '          <div>\n'
+                    + '            <div>\n'
+                    + '              <div class="image">\n'
+                    + '                <img src="' + clubImage + '" class="img-fluid rounded-start" alt="...">\n'
+                    + '              </div>\n'
+                    + '            </div>\n'
+                    + '            <div class="cardText">\n'
+                    + '              <div>\n'
+                    + '                <div class="card-body">\n'
+                    + '                  <p class="card-title">' + clubName + '</p>\n'
+                    + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                    + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
+                    + '                </div>\n'
+                    + '              </div>\n'
+                    + '            </div>\n'
+                    + '          </div>\n'
+                    + '        </div>\n'
+                    + '      </div>\n'
+                    + '    </tr>\n'
+                    + '  </div>'
+                )
+            );
+          }
+        }
+      })
+    }
 
     function invite(id){
 
@@ -199,29 +288,29 @@
   </script>
 </head>
 <body>
-<div class="main ">
-  <div class="title">
-    <header>
-      <div class="title-group" role="group">
-        <div class="title">
-          <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
+  <div class="main ">
+    <div class="title">
+      <header>
+        <div class="title-group" role="group">
+          <div class="title">
+            <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
+          </div>
+          <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
+            <img src="/img/message.png" id="chatting" class="chat-icon" style="float: left; cursor: pointer;  width: 35px; height: 35px; margin-top: 5px">
+            <img src="/img/arrow_10940959.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
+          </div>
         </div>
-        <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
-          <img src="/img/message.png" id="chatting" class="chat-icon" style="float: left; cursor: pointer;  width: 35px; height: 35px; margin-top: 5px">
-          <img src="/img/arrow_10940959.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
-        </div>
-      </div>
-    </header>
-  </div>
-</div>
-
-<div id="clubList">
-</div>
-<nav aria-label="Page navigation example" class="pageNav">
-  <ul class="pagination">
-    <div class="page" id="page">
+      </header>
     </div>
-  </ul>
-</nav>
+
+    <div id="clubList">
+    </div>
+    <nav aria-label="Page navigation example" class="pageNav">
+      <ul class="pagination">
+        <div class="page" id="page">
+        </div>
+      </ul>
+    </nav>
+  </div>
 </body>
 </html>
