--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -19,6 +19,20 @@
     background-color: #98a9bc;
     background-size: cover; /* 배경 이미지를 창에 맞추기 */
   }
+  .main {
+    font-family: "Cafe24Supermagic-Bold-v1.0";
+    padding-right: 20%;
+    padding-left: 20%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .title-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+  }
 
   .tag-item {
     display: inline-block;
@@ -42,20 +56,48 @@
     margin-top: 20px;
     margin-bottom: -20px;
   }
+
 </style>
 <script th:inline="javascript">
   const host = 'http://' + window.location.host;
   let memberId = /*[[${memberId}]]*/ '';
-  console.log(memberId);
   let loginMemberId = /*[[${loginMemberId}]]*/ '';
-  console.log(loginMemberId);
+  let imageURL;
 
   $(document).ready(function(){
     if(memberId !== loginMemberId){
       alert("권한이 없습니다.");
       history.back();
     }
-    $('#passwordContainer').hide();
+    $("#chatting").on("click", function (e) {
+      window.location.href = host + '/api/chat/member/' + loginMemberId + '/chatRoomListPage';
+    });
+
+    $("#myInfo").on("click", function (e) {
+      window.location.href = host + '/api/member/' + loginMemberId + '/profilePage';
+    });
+
+    $("#logout").on("click", function (e) {
+      var confirmLogout = window.confirm('로그아웃 하시겠습니까?');
+
+      if (confirmLogout) {
+
+        $.ajax({
+          type: 'Post',
+          url: '/api/member/logout',
+          contentType: ''
+        })
+        .done(function (res, status, xhr) {
+          window.location.href = host + '/'
+        })
+        .fail(function (xhr, status, error) {
+          console.error('로그아웃 요청 API 에러', error);
+        })
+
+      } else {
+        alert('로그아웃 취소');
+      }
+    });
 
     $.ajax({
       type:'GET',
@@ -64,8 +106,9 @@
       success: function(response){
         if(response.data.imageURL !== null){
           $('#profileImage').attr('src', response.data.imageURL);
+          imageURL = response.data.imageURL;
         } else{
-          $('#profileImage').attr('src', '/img/default.png');
+          $('#profileImage').attr('src', 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png');
         }
 
         $('#username').val(response.data.username);
@@ -210,17 +253,54 @@
     }
   }
 
+  function handleFileSelect(event) {
+    // 선택된 파일을 가져옵니다.
+    const selectedFile = event.target.files[0];
+
+    // 파일이 선택되지 않았을 경우 예외 처리
+    if (selectedFile) {
+      const reader = new FileReader();
+      reader.onload = function (e){
+        $('#profileImage').attr('src', e.target.result);
+      }
+      reader.readAsDataURL(selectedFile);
+    } else{
+      $('#profileImage').attr('src', imageURL);
+    }
+  }
+
+
 </script>
 <body>
-  <div style="margin: 50px 35% 0 35%">
+<div class="main">
+  <div class="title">
+    <header>
+      <div class="title-group" role="group">
+        <div class="title">
+          <h2 class="withUs" th:onclick="|location.href='@{/}'|"
+              style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
+        </div>
+        <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
+          <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/message.png" id="chatting" class="chat-icon"
+               style="float: left; cursor: pointer; display: none; width: 35px; height: 35px; margin-right: 5px; margin-top: 5px">
+          <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myInfo.png" id="myInfo" class="my-info"
+               style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
+          <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/arrow_10940959.png" id="logout" class="my-info"
+               style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
+        </div>
+      </div>
+    </header>
+  </div>
+
+  <div style="margin: 50px 20% 0 20%">
     <div>
       <img id="profileImage"
            style="border-radius: 100%; height: 150px; width: 150px; float:left; margin-bottom: 30px">
     </div>
     <div class="mb-3">
-      <input class="form-control form-control-sm" id="formFileSm" type="file">
+      <input class="form-control form-control-sm" id="formFileSm" style="width: 500px" type="file" onchange="handleFileSelect(event)">
     </div>
-    <div style="margin-top: 10px; width: 200px">
+    <div style="margin-top: 10px; width: 250px">
       <input class="form-control form-control"
              type="text"
              id="username"
@@ -276,8 +356,6 @@
              maxlength="100"
              placeholder="자기소개를 입력해주세요.">
     </div>
-    <div id="passwordContainer">
-    </div>
     <div style="text-align: center; margin-bottom: 30px">
       <button type="button"
               class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#passwordModal">비밀번호 변경
@@ -313,6 +391,7 @@
       </div>
     </div>
   </div>
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </html>
