--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -12,9 +12,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
 
-  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">
+<!--  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
 
   <style>
     @font-face {
