--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -67,9 +67,9 @@
                     <h2 class="withUs" th:onclick="|location.href='@{/}'|">withUs</h2>
                 </div>
                 <div class="title2">
-                    <img src="/img/message.png" id="chatting" class="chat-icon">
-                    <img src="/img/myInfo.png" id="myInfo" class="my-info">
-                    <img src="/img/arrow_10940959.png" id="logout" class="logout">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/message.png" id="chatting" class="chat-icon">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myInfo.png" id="myInfo" class="my-info">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/arrow_10940959.png" id="logout" class="logout">
                 </div>
             </div>
         </header>
@@ -115,10 +115,10 @@
                     <input type="file" id="fileInput" onchange="handleFileSelect()">
                 </button>
                 <button id="imgBtn2" class="header_btn2">
-                    <img src="/icons/comment-check_5068752.png">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/comment-check_5068752.png">
                 </button>
                 <button id="imgBtn3" class="header_btn3">
-                    <img src="/icons/icons8-취소-30.png">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/cancel.png">
                 </button>
 
             </div>
