--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -257,7 +257,7 @@
                         if (currentItem.imageURL !== null) {
                             clubImage = currentItem.imageURL;
                         } else {
-                            clubImage = '/img/default.png';
+                            clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                         }
                         clubId = currentItem.clubId;
                         clubName = currentItem.clubTitle;
@@ -446,7 +446,7 @@
                             if (currentItem.imageURL !== null) {
                                 clubImage = currentItem.imageURL;
                             } else {
-                                clubImage = '/img/default.png';
+                                clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                             }
                             clubId = currentItem.clubId;
                             clubName = currentItem.clubTitle;
@@ -552,7 +552,7 @@
                             if (currentItem.imageURL !== null) {
                                 clubImage = currentItem.imageURL;
                             } else {
-                                clubImage = '/img/default.png';
+                                clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                             }
                             clubId = currentItem.clubId;
                             clubName = currentItem.clubTitle;
@@ -643,7 +643,7 @@
                         if (currentItem.imageURL !== null) {
                             clubImage = currentItem.imageURL;
                         } else {
-                            clubImage = '/img/default.png';
+                            clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                         }
                         clubId = currentItem.clubId;
                         console.log(clubId);
@@ -718,7 +718,7 @@
                             if (currentItem.imageURL !== null) {
                                 clubImage = currentItem.imageURL;
                             } else {
-                                clubImage = '/img/default.png';
+                                clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                             }
                             clubId = currentItem.clubId;
                             clubName = currentItem.clubTitle;
@@ -804,7 +804,7 @@
                         if (currentItem.imageURL !== null) {
                             clubImage = currentItem.imageURL;
                         } else {
-                            clubImage = '/img/default.png';
+                            clubImage = 'https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/default.png';
                         }
                         clubId = currentItem.clubId;
                         console.log(clubId);
