--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -150,6 +150,7 @@
     if($('#formFileSm')[0].files[0]){
       formData.append('imageFile', $('#formFileSm')[0].files[0]);
     }
+    formData.append('code', $('#code').val());
 
     $.ajax({
       method:'PATCH',
@@ -306,7 +307,7 @@
       <input class="form-control form-control"
              type="text"
              id="username"
-             minlength="3" maxlength="8"
+             minlength="3" maxlength="12"
              placeholder="이름을 입력해주세요.">
     </div>
     <div>
