--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -11,13 +11,23 @@ body {
     padding: 0;
     color: black;
 }
+body.light-mode {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+/* 다크 모드 스타일 */
+body.dark-mode {
+    background-color: #333333;
+    color: #ffffff;
+}
 
 .all-container {
     border-radius: 15px;
     /*background-image: url(https://cdn.class101.net/images/a53280a2-5a97-4241-8069-04274b016896);*/
     background-color: #98a9bc;
     width: 100%;
-    height: 950px;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -100,11 +110,29 @@ body {
 
 #club-title {
     text-align: left;
-    margin-left: 200px;
+    margin-top: 20px;
+    margin-left: 300px;
+}
+#clubTitleInput{
+    border-radius: 15px;
+    border: 1px solid grey;
 }
 
 .title-item {
     font-size: 30px;
+}
+.check-btn{
+    width: 50px;
+    height: 45px;
+    font-size: 16px;
+    background: grey;
+    border-radius: 15px;
+    border: none;
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+.check-btn:hover{
+    background-color: cornflowerblue;
 }
 
 /* 카테고리 드롭다운 */
@@ -131,7 +159,7 @@ body {
 }
 
 .header_btn2{
-    background: white;
+    background: none;
     border: none;
     padding: 10px;
     margin: 5px;
@@ -154,24 +182,43 @@ body {
     border: none;
     color: #333;
 }
+.search-input{
+    border-radius: 10px;
+    margin-left: 10px;
+    width: 230px;
+    height: 45px;
+}
 .search-btn{
-    width: 5px;
-    height: 5px;
-    background: none;
+    width: 50px;
+    height: 45px;
+    background: grey;
+    border-radius: 15px;
     border: none;
     padding: 10PX;
     margin: 5px;
 }
-
+.search-btn:hover{
+    background-color: cornflowerblue;
+}
+/*초대상자*/
+#invite-container{
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    margin:10px auto;
+    width: 300px;
+    height: 70px;
+    max-height: 200px; /* 최대 높이 설정 */
+    overflow-y: auto; /* 세로 스크롤바를 추가함으로써 내용이 넘칠 때 스크롤 가능하게 함 */
+}
 /*club*/
 #club-container {
     justify-content: center;
-    background-color: #f0f0f0;
+    background-color: #83868d;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
     width: 760px;
-    height: 320px;
+    height: 310px;
 }
 
 .search-item {
@@ -179,22 +226,23 @@ body {
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: white;
+    background-color: #bdc0c3;
     float: left;
 }
+
 
 .Date-item {
     margin: 10px;
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: white;
+    background-color: #bdc0c3;
     float: right;
 }
 
 #club-introduce {
     justify-content: center;
-    background-color: #f0f0f0;
+    background-color: #83868d;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
@@ -206,7 +254,7 @@ body {
     width: 700px;
     height: 350px;
     border-radius: 15px;
-    background-color: white;
+    background-color: #bdc0c3;
     margin: 5px auto;
     align-items: center;
 }
