--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -11,7 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
-
+    <button id="darkModeToggle">DarkMode</button>
     <script th:inline="javascript">
         const host = 'http://' + window.location.host;
         var memberId;
