--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link th:href="@{/css/bootstrap.min.css}" href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/clubrevise.css}">
-
+    <button id="darkModeToggle">DarkMode</button>
     <script th:inline="javascript">
         const host = 'http://' + window.location.host;
         var memberId;
@@ -147,7 +147,6 @@
                         </button>
                         <h5>초대 목록</h5>
                         <div id = "invite-container">
-                            초대 이름:
                         </div>
                     </div>
                 </article>
@@ -157,10 +156,10 @@
                     <div class="club-date-container">
                         <h2>날짜</h2>
                         <p>
-                            Start Date: <input type="datetime-local" id="startDate" name="startDate"><br>
+                            모집 시작: <input type="datetime-local" id="startDate" name="startDate"><br>
                         </p>
                         <p>
-                            End date: <input type="datetime-local" id="endDate" name="endDate"><br>
+                            모집 마감: <input type="datetime-local" id="endDate" name="endDate"><br>
                         </p>
                     </div>
                 </article>
