--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -2,7 +2,6 @@
     font-family: "Cafe24Supermagic-Bold-v1.0";
     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
     font-weight: 700;
-    font-style: normal;
 }
 
 body {
@@ -161,6 +160,7 @@ body.dark-mode {
 .header_btn2{
     background: none;
     border: none;
+    border: 1px solid white;
     padding: 10px;
     margin: 5px;
 }
@@ -173,6 +173,7 @@ body.dark-mode {
 .header_btn3{
     background: none;
     border: none;
+    border: 1px solid white;
     padding: 10PX;
     margin: 5px;
 }
@@ -200,9 +201,21 @@ body.dark-mode {
 .search-btn:hover{
     background-color: cornflowerblue;
 }
+
+#darkModeToggle{
+    border-radius: 10px;
+    border: none;
+    float: right;
+}
+
+#darkModeToggle:hover{
+    background-color: #b6d4fe;
+}
+
 /*초대상자*/
 #invite-container{
-    background-color: #f0f0f0;
+    border: 1px solid black;
+    background-color: #c7c7c7;
     border-radius: 10px;
     margin:10px auto;
     width: 300px;
@@ -213,12 +226,13 @@ body.dark-mode {
 /*club*/
 #club-container {
     justify-content: center;
-    background-color: #83868d;
+    background-color: #bdc0c3;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
     width: 760px;
     height: 310px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .search-item {
@@ -226,37 +240,40 @@ body.dark-mode {
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     float: left;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
-
 
 .Date-item {
     margin: 10px;
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     float: right;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #club-introduce {
     justify-content: center;
-    background-color: #83868d;
+    background-color: #bdc0c3;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
     width: 760px;
     height: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .club-revise-item {
     width: 700px;
     height: 350px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     margin: 5px auto;
     align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #club-content {
@@ -266,26 +283,26 @@ body.dark-mode {
     border-radius: 15px;
 }
 
-.revise-success-button button {
-    background-color: grey;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: grey;
-    cursor: pointer;
-}
+/*.revise-success-button button {*/
+/*    background-color: grey;*/
+/*    color: white;*/
+/*    padding: 10px 20px;*/
+/*    font-size: 16px;*/
+/*    border-radius: 5px;*/
+/*    border: grey;*/
+/*    cursor: pointer;*/
+/*}*/
 
-.revise-success-button button:hover {
-    background-color: cornflowerblue;
-}
+/*.revise-success-button button:hover {*/
+/*    background-color: cornflowerblue;*/
+/*}*/
 
-#invite-container{
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    margin:10px auto;
-    width: 300px;
-    height: 70px;
-    max-height: 200px; /* 최대 높이 설정 */
-    overflow-y: auto; /* 세로 스크롤바를 추가함으로써 내용이 넘칠 때 스크롤 가능하게 함 */
-}
+/*#invite-container{*/
+/*    background-color: #f0f0f0;*/
+/*    border-radius: 10px;*/
+/*    margin:10px auto;*/
+/*    width: 300px;*/
+/*    height: 70px;*/
+/*    max-height: 200px; !* 최대 높이 설정 *!*/
+/*    overflow-y: auto; !* 세로 스크롤바를 추가함으로써 내용이 넘칠 때 스크롤 가능하게 함 *!*/
+/*}*/
