--- a/src/main/resources/static/css/clubrevise.css
+++ b/src/main/resources/static/css/clubrevise.css
@@ -161,7 +161,6 @@ body.dark-mode {
 .header_btn2{
     background: none;
     border-radius: 10px;
-
     border: 1px solid white;
     padding: 10px;
     margin: 5px;
@@ -207,11 +206,20 @@ body.dark-mode {
     background-color: cornflowerblue;
 }
 
+#darkModeToggle{
+    border-radius: 10px;
+    border: none;
+    float: right;
+}
+#darkModeToggle:hover{
+    background-color: #b6d4fe;
+}
 
 
 /*초대상자*/
 #invite-container{
-    background-color: #f0f0f0;
+    border: 1px solid black;
+    background-color: #c7c7c7;
     border-radius: 10px;
     margin:10px auto;
     width: 300px;
@@ -223,12 +231,13 @@ body.dark-mode {
 /*club*/
 #club-container {
     justify-content: center;
-    background-color: #83868d;
+    background-color: #bdc0c3;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
     width: 760px;
     height: 310px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .search-item {
@@ -236,8 +245,9 @@ body.dark-mode {
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     float: left;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -246,27 +256,30 @@ body.dark-mode {
     width: 340px;
     height: 250px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     float: right;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #club-introduce {
     justify-content: center;
-    background-color: #83868d;
+    background-color: #bdc0c3;
     padding: 20px;
     border-radius: 10px;
     margin: 10px auto;
     width: 760px;
     height: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .club-revise-item {
     width: 700px;
     height: 350px;
     border-radius: 15px;
-    background-color: #bdc0c3;
+    background-color: #d7d7da;
     margin: 5px auto;
     align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #club-content {
