페이지 리소스 크기 줄이기

--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com">-->
 
 
 <!--  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">-->
@@ -131,7 +131,7 @@
   <label style="float: left; margin-left: 10px; margin-right: 10px; font-size: large"> / </label>
   <label style="float: right; font-size: large"><a onclick="deletePage()">삭제</a></label>
 </div>
-<script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
+<!--<script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>-->
 <div class="noticename">
   <p style="font-size: 150%;" id="noticeTitle"></p>
   <p><textarea style="width: 1000px;height:300px;font-size:20px;" disabled id="noticeContent"></textarea></p>
