--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -4,8 +4,8 @@
   <title>게시판 수정</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
+<!--  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
+<!--  <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>-->
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <!--  <link th:href="@{/css/Bootstrap.min.css}"-->
   <!--        href="/css/Bootstrap.min.css" rel="stylesheet">-->
